# cloud-image-val

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.swp  1  Dockerfile  README.md  Schutzfile  base.Dockerfile  cloud-image-val.py  main.tf  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml  trigger-gitlab.yml  update-composer.yml
ci/: .gitlab-ci-cloud-experience.yaml  .gitlab-ci-image-builder.yaml  aws.sh  provision.sh  rp_merge.py  set-env-variables.sh  shared_lib.sh
cloud/opentofu/: aws_config_builder.py  aws_config_builder_efs.py  azure_config_builder.py  (+6 more)
cloud_image_val/: __init__.py
cloud_image_val.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: ADR-001-separation-of-concerns.md
lib/: aws_lib.py  config_lib.py  console_lib.py  ssh_lib.py  test_lib.py
main/: civ_report_analyzer.py  cloud_image_validator.py
plans/: generic.fmf  main.fmf
result/: html_reporter.py
schutzbot/: append_team_ssh_keys.sh  cloud_cleaner.sh  define-compose-url.sh  deploy.sh  get_civ_config.py  get_options.py  prepare-rhel-internal.sh  team_ssh_keys.txt  terraform  update-base.py  update-schutzfile-composer  update_github_status.sh
scripts/: rhel-ha-aws-check.sh  rhel-ha-azure-check.sh  test_package_build.sh
spike/: README.md  __init__.py
test/: test_cloud_image_validator.py  test_get_civ_config_logic.py  test_html_reporter.py  test_opentofu_controller.py  test_suite_runner.py  test_terraform_controller.py
test_suite/: conftest.py  main.fmf  suite_runner.py  test_discovery.py  yaml_test_runner.py
(+96 files in other folders)
